# deepin-systemassistant-knowledge

./: CMakeLists.txt
debian/: changelog  control  copyright  rules
uos-knowledge/: SystemAssistant.db
uos-knowledge/source/: 【CentOS 迁移工作】实施方案介绍.docx  【CentOS 迁移方案-有易UYi】再度升级，轻松拿捏CentOS迁移！.docx  【CentOS 迁移方案-有易UYi】荣获鼎信杯创新应用解决方案奖.docx  【云原生操作系统-有燕USwift】产品介绍.docx  【云基础设施管理平台-有栈Ustack】产品介绍.docx  【云基础设施管理平台-有栈Ustack】安装介绍.docx  【云基础设施管理平台-有栈Ustack】打造高效IaaS云管平台，新版本正式亮相！.docx  【安全功能集成工具-有固Uharden】安全配方再升级.docx  【容器云管理平台-有雀UCCPS】5分钟玩转容器云，彻底化解业务上云烦恼！.docx  【容器云管理平台-有雀UCCPS】产品介绍.docx  【容器云管理平台-有雀UCCPS】特性及应用场景介绍.docx  【服务器运维监管平台-有幄UMOP】产品介绍.docx  【高可用集群部署管理软件-有备UHA】产品介绍.docx  事件响应工具evtest--用于调试诊断输入设备相关问题.docx  内存状态监测工具smem--用于统计并监控系统内存使用情况.docx  磁盘使用分析器ncdu--快速高效的du升级版统计工具.docx  磁盘管理修复工具Disks磁盘管理--针对U盘文件及文件夹带锁修复.docx  统信UOS AI 新版本、新战略、新趋势，全面进化.docx  统信操作系统【家庭版、专业版、教育版、社区版】区别介绍.docx  统信服务器操作系统 【1060版本中免费使用授权】相关介绍.docx  统信服务器操作系统 【免费使用授权】.docx  统信服务器操作系统【11个悬念十足的优化策略】性能加速.docx  统信服务器操作系统【ADE版本】区别介绍.docx  统信服务器操作系统【API开发参考手册】.docx  统信服务器操作系统【CPU接口示例】.docx  统信服务器操作系统【NUMA编程接口示例】.docx  统信服务器操作系统【V20 1060版本对英特尔合作共同加速】.docx  统信服务器操作系统【安全接口示例】.docx  统信服务器操作系统【应用移植开发文档】.docx  统信服务器操作系统【正式通过GB18030-2022《信息技术 中文编码字符集》最高级（3级）认证】.docx  统信服务器操作系统【软件开发参考手册】.docx  统信桌面专业版 【windows+uos双系统安装】方法介绍.docx  统信桌面专业版【 lvm（pv vg lv）】命令介绍.docx  统信桌面专业版【102X版本默认启用ssh服务使用22端口】调整方案.docx  统信桌面专业版【103X版本系统升级时进度条无进展】的处理方法.docx  统信桌面专业版【1042版本上部分机型声音菜单栏下输入输出未展示相应设备名称】解决方案.docx  统信桌面专业版【1060u1版本授权客户端新特性--授权备份与恢复】介绍.docx  统信桌面专业版【1060u1版本授权客户端新特性--授权诊断】介绍.docx  统信桌面专业版【2023开源和信息消费大赛“玲珑赛道”邀你来战】征集令！.docx  (+285 more)
